:recycle: fluentdでログ流せるように修正

--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,9 @@
+# sniffing対象のIpAddressを指定
 TARGET_IP_ADDRESS=target_ip_address
+
+# outputを指定 (stdout or fluent)
+LOGGER=stdout
+
+# fluentd用の設定
+FLUENT_HOST=localhost
+FLUENT_PORT=24224
